# Copyright (c) 2015-2017 Vivaldi Technologies AS. All rights reserved

update_template_instance("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/contact",
  ]
  allow_circular_includes_from += [
    "//vivaldi/contact",
  ]
}

update_target("//chrome:browser_dependencies") {
  public_deps += [ "//vivaldi/contact" ]
}
