import("//build/config/jumbo.gni")
import("//tools/grit/grit_rule.gni")

jumbo_static_library("extensions") {
  public_deps = [
    ":resources",
    "api:apis",
    "schema",
  ]
  deps = [
    ":resources",
    "helper",
    "permissions",
    "schema",
    "tools",
    "//base:base",
    "//chrome/browser/extensions:extensions",
    "//extensions/browser:browser",
    "//skia",
  ]
  sources = [
    "vivaldi_extensions_init.cpp",
    "vivaldi_extensions_init.h",
  ]
}

jumbo_static_library("extensions_client") {
  public_deps = [
    "permissions",

    #"api:apis",
    "schema",
    "//chrome/common",
  ]
  deps = [
    ":resources",
  ]
  sources = [
    "vivaldi_extensions_client.cpp",
    "vivaldi_extensions_client.h",
  ]
}

grit("resources") {
  source = "vivaldi_extension_resources.grd"
  output_dir = "$root_gen_dir/vivaldi"
  resource_ids = "//vivaldi/extensions/gritsettings/resource_ids"
  outputs = [
    "grit/vivaldi_extension_resources.h",
    "vivaldi_extension_resources.pak",
  ]
}
