import("//build/config/jumbo.gni")
import("//tools/grit/grit_rule.gni")

static_library("extensions") {
  public_deps = [
    ":resources",
    "api:apis",
    "schema",
    "tools",
    "//extensions/browser:browser",
  ]
  deps = [
    "helper",
    "permissions",
    "//base:base",
    "//chrome/browser/extensions:extensions",
    "//skia",
  ]
  sources = [
    "vivaldi_extensions_init.cpp",
    "vivaldi_extensions_init.h",
  ]
}

static_library("extensions_client") {
  public_deps = [
    "permissions",

    "schema",
    "//chrome/common",
    "//chrome/common/apps/platform_apps",
  ]
  deps = [
    ":resources",
  ]
  allow_circular_includes_from = [
    "//chrome/common",
  ]
  sources = [
    "vivaldi_extensions_client.cpp",
    "vivaldi_extensions_client.h",
  ]
}

grit("resources") {
  source = "vivaldi_extension_resources.grd"
  output_dir = "$root_gen_dir/vivaldi"
  resource_ids = "//vivaldi/extensions/gritsettings/resource_ids"
  outputs = [
    "grit/vivaldi_extension_resources.h",
    "vivaldi_extension_resources.pak",
  ]
}
