
update_template_instance("//chrome:packed_resources") {
  if (!defined(additional_extra_paks)) {
    additional_extra_paks = []
  }
  additional_extra_paks += [
    "$root_gen_dir/vivaldi/vivaldi_extension_resources.pak",
  ]
  # Both deps and public_deps need to be updated; deps are used by subtargets
  if (!defined(deps)) { deps = [] }
  deps += [ "//vivaldi/extensions:resources" ]
  if (!defined(public_deps)) { public_deps = [] }
  public_deps += [ "//vivaldi/extensions:resources" ]
}

update_template_instance("//chrome/browser:browser") {
  public_deps += [
    "//vivaldi/extensions/schema:api",
  ]
}

if (!is_android) {
  update_target("//chrome/browser/extensions:extensions") {
    deps += [
      "//vivaldi/extensions/schema:api",
      "//vivaldi/extensions/schema:api_registration",
    ]
  }
}

update_template_instance("//chrome/browser/ui:ui") {
  public_deps += [
    "//components/sessions:sessions",
    "//vivaldi/extensions/schema:api",
  ]
}

update_target("//components/guest_view/browser:browser") {
  public_deps += [ "//vivaldi/extensions/helper:app_helper" ]
}

update_target("//components/history/core/browser:browser") {
  public_deps += [ "//vivaldi/db" ]
}

update_target("//content/common:common") {
  deps += [ "//components/version_info:generate_version_info" ]
}
